force-app/main/default/objects/ServiceResource/fields/Appointment_Count__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Appointment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>