force-app/main/default/objects/ServiceResource/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>AC</fullName><label>Admission Counselor</label><default>false</default></value>
            <value><fullName>PD</fullName><label>Program Director</label><default>false</default></value>
            <value><fullName>FSS</fullName><label>Family Success Specialist</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>