force-app/main/default/objects/ServiceResource/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <defaultValue>1.0</defaultValue>
    <label>Weight</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>